--- a/package.json
+++ b/package.json
@@ -23,20 +23,20 @@
     "@heroui/system": "2.4.17",
     "@heroui/theme": "2.4.17",
     "@heroui/use-theme": "2.1.9",
+    "@iconify/react": "6.0.0",
     "@react-aria/visually-hidden": "3.8.24",
     "@react-types/shared": "3.30.0",
     "clsx": "2.1.1",
     "framer-motion": "11.15.0",
     "js-cookie": "3.0.5",
+    "lucide-react": "0.479.0",
     "next-themes": "0.4.6",
     "react": "18.3.1",
     "react-dom": "18.3.1",
     "react-router-dom": "6.23.0",
+    "tailwind-merge": "3.0.2",
     "tailwind-variants": "0.3.0",
-    "tailwindcss": "3.4.16",
-    "lucide-react": "0.479.0",
-    "tailwind-merge": "3.0.2"
-
+    "tailwindcss": "3.4.16"
   },
   "devDependencies": {
     "@eslint/compat": "1.2.8",
