--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "react": "18.3.1",
     "react-dom": "18.3.1",
     "react-router-dom": "6.23.0",
+    "recharts": "2.15.3",
     "tailwind-merge": "3.0.2",
     "tailwind-variants": "0.3.0",
     "tailwindcss": "3.4.16"
