--- a/package.json
+++ b/package.json
@@ -26,14 +26,18 @@
     "@iconify/react": "6.0.0",
     "@react-aria/visually-hidden": "3.8.24",
     "@react-types/shared": "3.30.0",
+    "axios": "^1.11.0",
     "clsx": "2.1.1",
     "framer-motion": "11.15.0",
     "js-cookie": "3.0.5",
+    "lottie-react": "^2.4.1",
     "lucide-react": "0.479.0",
     "next-themes": "0.4.6",
     "react": "18.3.1",
     "react-dom": "18.3.1",
     "react-router-dom": "6.23.0",
+    "react-tabs": "^6.1.0",
+    "react-toastify": "^11.0.5",
     "recharts": "2.15.3",
     "tailwind-merge": "3.0.2",
     "tailwind-variants": "0.3.0",
