--- a/package.json
+++ b/package.json
@@ -26,6 +26,8 @@
     "@iconify/react": "6.0.0",
     "@react-aria/visually-hidden": "3.8.24",
     "@react-types/shared": "3.30.0",
+    "@tanstack/react-query": "^5.85.3",
+    "@tanstack/react-query-devtools": "^5.85.3",
     "axios": "^1.11.0",
     "clsx": "2.1.1",
     "framer-motion": "11.15.0",
@@ -48,6 +50,7 @@
     "@eslint/compat": "1.2.8",
     "@eslint/eslintrc": "3.3.1",
     "@eslint/js": "9.25.1",
+    "@tanstack/eslint-plugin-query": "^5.83.1",
     "@types/js-cookie": "3.0.6",
     "@types/node": "20.5.7",
     "@types/react": "18.3.3",
