--- a/package.json
+++ b/package.json
@@ -44,7 +44,8 @@
     "recharts": "2.15.3",
     "tailwind-merge": "3.0.2",
     "tailwind-variants": "0.3.0",
-    "tailwindcss": "3.4.16"
+    "tailwindcss": "3.4.16",
+    "xlsx": "^0.18.5"
   },
   "devDependencies": {
     "@eslint/compat": "1.2.8",
